# mazure

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: conf.py  index.rst  sdk_specific_config.rst  supported_services.rst
mazure/: proxy.py
mazure/azure_services/: __init__.py
mazure/azure_services/login/: responses.py
mazure/azure_services/management/: __init__.py  response.py
mazure/azure_services/management/graph/: responses.py
mazure/azure_services/management/graph/models/: application.py  graph_backend.py
mazure/azure_services/management/operation_results/: responses.py
mazure/azure_services/management/resource_groups/: __init__.py  model.py  response.py  responses.py
mazure/azure_services/management/storage/: responses.py
mazure/azure_services/management/storage/models/: async_operation.py  storage_account.py
mazure/azure_services/management/subscriptions/: __init__.py  model.py  response.py  responses.py
mazure/azure_services/management/subscriptions/data/: locations.py
mazure/azure_services/storage/: responses.py
mazure/azure_services/storage/models/: blob.py  storage_container.py
mazure/mazure_core/: __init__.py  mazure_request.py  route_mapping.py  service_discovery.py
mazure/mazure_proxy/: __init__.py  certificate_creator.py  proxy3.py  utils.py
mazure/mazure_proxy/certs/: req.conf.tmpl
tests/tests_dotnet/Storage/: Storage.csproj  StorageBlobTest.cs
tests/tests_java/: pom.xml
tests/tests_python/: __init__.py  test_utilities.py
tests/tests_python/test_core/: test_routing.py
tests/tests_python/test_models/: test_graph_applications.py
tests/tests_python/test_proxy_requests/: __init__.py  test_account_management.py  test_resource_groups.py
tests/tests_python/test_requests/: test_application_requests.py  test_resource_groups.py
tests/tests_python/test_requests/storage/: test_blob_storage.py  test_storage_account.py
tests/tests_python/tests_requests/: test_account_management.py  test_resource_groups.py
(+4 files in other folders)
